Team.html is done

--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,15 @@ ul {
 	list-style: square;
 }
 table {
-	border-collapse: collapse;
 	border-spacing: 0;
 } 
 /* end reset browser styles */
+.clearfix::after{
+	content:'';
+	clear: both;
+	overflow: hidden;
+	display: block;
+}
 .wrap {}
 .header {
 	position: relative;
@@ -47,18 +52,29 @@ table {
 	height: 9px;
 	margin: 0 16px;
 	color: #fff;
-	font-family: Raleway;
+	font-family: Montserrat;
 	font-size: 13px;
 	font-weight: 600;
 	line-height: 24px;
 	text-transform: uppercase;
+	transition: all .3s ease-out;
 }
-.menu-item:hover {
-	border-bottom: 1px solid #fff;
-} 
+.menu-item:hover
+{
+    cursor: pointer;
+
+    opacity: 0.9;
+    color: #fed136;
+}
+
 .icon-menu {}
 .icon-search {}
-.slide {}
+.slide {
+	background: url('../image/background_header.jpg');
+	background-size: cover;
+	width: 1600px;
+	height: 700px;
+}
 .main {
 	text-align: center;
 }
@@ -70,19 +86,39 @@ table {
 .title {
 	color: #303030;
 	text-align: center;
-	font-family: PlayfairDisplay;
+	font-family: Montserrat;
 	font-size: 30px;
 	font-style: italic;
 	line-height: 24px;
 }
 
 .article-title {
-	text-align: centre;
+	text-align: center;
 } 
 .avtor {
 	width:15%;
 	border-radius:50% 50%;
-	
+}
+.welcome{
+	/* Text style for "Welcome To Our" */
+	width: 30%;
+	height: 40%;
+	color: white;
+	font-family: Droid Serif;
+	font-size: 40px;
+	font-style: italic;
+	margin: 0 auto;
+	line-height: 10;
+}
+.NTMU{
+	/* Text style for "It’s nice to M" */
+	width: 56.5%;
+	color: white;
+	font-family: Montserrat;
+	font-size: 75px;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin: 0 auto;
 }
 .container {
 	
