--- a/css/base.css
+++ b/css/base.css
@@ -36,9 +36,6 @@ table {
 	overflow: hidden;
 	display: block;
 }
-.new{
-	margin: 0 auto;
-}
 .wrap {
 	overflow-y: hidden;
 }
@@ -64,10 +61,6 @@ table {
     opacity: 0.9;
     color: #fed136;
 } 
-.icon-menu {}
-.icon-search {}
-.footer {}
-.container {}
 .slide {
 	width: 103%;
 	height: 750px;
@@ -105,19 +98,7 @@ table {
 	text-align: center;
 	line-height: 2.5;
 }
-.tell_me
-{
-	font-family: Montserrat;
-	font-size: 1.1em;
-	font-weight: 700;
-	width: 15.6%;
-	height: 9.5%;
-	margin: 0 0 0 43%;
-	transition: all .3s ease .15s;
-	text-transform: uppercase;
-	color: white;
-	border-radius: 0.2em;
-	background: #fed136;
+.tell_me { font-family: Montserrat; font-size: 1.1em; font-weight: 700; width: 15.6%; height: 9.5%; margin: 0 0 0 43%; transition: all .3s ease .15s; text-transform: uppercase; color: white; border-radius: 0.2em; background: #fed136;
 }
 .services{
 	width: 80%;
@@ -135,13 +116,13 @@ table {
 }
 .sub-title{
 	/* Text style for "Proin iaculis" */
-	width: 35%;
+	width: 40%;
 	color: #777;
 	font-family: Droid Serif;
 	font-size: 1em;
 	font-style: italic;
 	text-align: center;
-	margin: 1% auto;
+	margin: 3% auto;
 }
 .title-cws{
 	/* Text style for "E-Commerce" */
@@ -167,11 +148,11 @@ table {
 .pic_services-basket{ width: 50%; margin: 0 auto; margin-top: 24%; padding-bottom: 15%;}
 .pic_services-laptop{ width: 50%; margin: 0 auto; margin-top: 28%; padding-bottom: 16%;}
 .pic_services-lock{ width: 40%; margin: 0 auto; margin-top: 21%; padding-bottom: 16%;}
+
 .background{
 	border: 3px solid #fed136;
 	border-radius: 100%;
-	width: 72px;
-	height: 72px;
+	width: 40%;
 	background-color: white;
 	border: 0.3em solid #fed136;
 	list-style-type: none;
@@ -187,41 +168,21 @@ table {
 	background-color: #696969;
 	border: 0.3em solid #696969;
 }
-.title-commerce{
-	width: 115px;
-	height: 14px;
-	color: #222;
-	font-family: Montserrat;
-	font-size: 18px;
-	font-weight: 700;
-	line-height: 75px;
-}
-.title-web{
-	width: 114px;
-	height: 18px;
-	color: #222;
-	font-family: Montserrat;
-	font-size: 18px;
-	font-weight: 700;
-	line-height: 75;
-}
+.title-commerce,
+.title-web,
 .title-security{
-	width: 118px;
-	height: 18px;
 	color: #222;
 	font-family: Montserrat;
-	font-size: 18px;
+	font-size: 2em;
 	font-weight: 700;
-	line-height: 75px;
 }
 .description{
-	width: 115%;
+	width: 12em;
 	color: #777;
-	font-family: Roboto Slab;
-	font-size: 0.85em;
+	font-family: RobotoSlab;
+	font-size: 1.05em;
 	font-weight: 400;
 	text-align: center;
-	word-spacing: 0.5em;
 }
 .title-portfolio{
 	width: 24%;
@@ -232,15 +193,14 @@ table {
 	line-height: 1.33em;
 	text-transform: uppercase;
 	margin: 0 auto;
-	white-space: nowrap;
 }
 .gallery{
 	width: 100%;
 	background-color: #f7f7f7;
 }
 .gallery_inside{
-		width: 95%;
-		padding: 5%;
+	width: 95%;
+	padding: 5%;
 }
 .prtflio{
 	width: 75%;
@@ -272,7 +232,7 @@ table {
 }
 .prtflio_sub-title{
     font-family: DroidSerif;
-    font-size: 0.9em;
+    font-size: 1em;
     font-style: italic;
     line-height: 1.5em;
     /* Text style for "Product Mock-U" */
@@ -284,15 +244,15 @@ table {
 }
 .container{
 	width: 940px;
-	margin: 0 auto;
+	margin: 5% auto;
 }
 .about_title{
 	width: 25%;
 	color: #222;
 	font-family: Montserrat;
-	font-size: 40px;
+	font-size: 2.5em;
 	font-weight: 700;
-	line-height: 75px;
+	line-height: 1.4em;
 	text-transform: uppercase;
 	margin: 0 auto;
 }
@@ -317,13 +277,21 @@ table {
 }
 .about_text h3,
 .about_text h4{
-color: #222;
-font-family: Montserrat;
-font-size: 1.8em;
-font-weight: 700;
+	color: #222;
+	font-family: Montserrat;
+	font-size: 1.5em;
+	font-weight: 700;
+}
+.about_text p{
+	/* Text style for "Proin iaculis" */
+	color: #777;
+	font-family: RobotoSlab;
+	font-size: 1.04em;
+	font-weight: 400;
+	margin-top: 5%;
 }
 .about_text h3{
-text-transform: uppercase;
+	text-transform: uppercase;
 }
 .about_img {
 	width: 20%;
@@ -370,13 +338,22 @@ text-transform: uppercase;
 	margin: 0 auto;
 }
 .block{
-    width: 65%;
+    width: 91%;
     margin: 0 auto;
     padding: 5%;
+    background-color: #f9f9f9;
+}
+.black{
+	border-radius:50%;
 }
 .step1{
     display: inline-block;
     margin: 5%;
+}
+.contain{
+	width: 80%;
+    text-align: center;
+    margin: 0% auto;
 }
 .initials{
     text-align: center;
@@ -387,7 +364,7 @@ text-transform: uppercase;
 .tw {width: 50%; height: 47%;}
 .fb{width: 25%; height: 50%;}
 .pin{width: 40%; height: 50%;}
-.gog{width: 40%;height: 45%;}
+.gog{width: 45%;height: 45%;}
 
 .icons { line-height: 3; float: left; width: 22%; height: 40px; margin: 4%; list-style-type: none; transition: all .3s ease .15s; text-align: center; border: 3px solid #222; border-radius: 80%; background-color: #f9f9f9;}
 .icons:hover{
@@ -409,8 +386,114 @@ text-transform: uppercase;
     font-size: 1em;
     font-weight: 400;
     /* Text style for "Proin iaculis" */
-    width: 40%;
+    width: 50%;
     margin: 0 auto;
     text-align: center;
     color: #777;
 }
+.footer_head{
+	text-align: center;
+}
+.media {
+	list-style-type: none;
+}
+.correct{
+	margin-bottom: 5%;
+}
+.media_img {
+	display: inline-block;
+	margin: 2%;
+}
+.footer_content{
+	width: 100%;
+	height: 670px;
+	background: url('../pic/map-image.png') 100% 100% no-repeat #222;
+	background-position: right 8em;
+}
+.title_footer{
+	/* Text style for "Contact us" */
+	color: white;
+	font-family: Montserrat;
+	font-size: 2.5em;
+	font-weight: 700;
+	text-transform: uppercase;
+	text-align: center;
+}
+.form_input{
+	width: 49%;
+	float: left;
+}
+.footer_textarea{
+	width: 49%;
+	margin: 0 auto;
+	float: right;
+}
+.form_content{
+	width: 55%;
+	margin: 0 auto;
+	padding-top: 8%;
+}
+.form1{
+	width: 90%;
+	padding: 4%;
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 0.1em;
+	color: #bbb;
+	font-family: Montserrat;
+	font-size: 1.04em;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin-bottom: 5.5%;
+}
+.form2{
+	width: 90%;
+	padding: 4%;
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 0.1em;
+	color: #bbb;
+	font-family: Montserrat;
+	font-size: 1.04em;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+.text{
+	/* Text style for "© Copyright 20" */
+	width: 20%;
+	color: #555;
+	font-family: Montserrat;
+	font-size: 1em;
+	font-weight: 400;
+	line-height: 22px;
+	margin: 0.5% 0 0 10%;
+	float: left;
+}
+.social{
+	width: 13%;
+	margin: 0% auto;
+}
+.section_footer{
+	padding: 2%;
+}
+.ic-f{
+	/* Style for "Google+ Backgr" */
+	width: 2.5em;
+	height: 2.5em;
+	background-color: #222;
+	display: inline-block;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 3;
+	margin: 1%;
+	transition: all .5s ease .15s;
+}
+.ic-f:hover{
+	opacity: 0.8;
+	cursor: pointer;
+	background-color: #696969;
+}
+.tw-w{width: 50%; height: 45%;}
+.fb-w{width: 25%; height: 50%;}
+.pin-w{width: 40%; height: 50%;}
+.gog-w{width: 50%;height: 48%;}
