--- a/css/base.css
+++ b/css/base.css
@@ -15,6 +15,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
 	line-height: 1.2;
 	overflow-x: hidden;
+	max-width: 1600px;
+	min-width: 800px;
 }
 ol { 
 	padding-left: 1.4em;
@@ -62,7 +64,8 @@ table {
     color: #fed136;
 } 
 .slide {
-	width: 103%;
+	max-width: 1650px;
+	min-width: 800px;
 	height: 750px;
 	background: url('../image/background_header.jpg') no-repeat;
 	background-size: cover;
@@ -76,7 +79,7 @@ table {
 }
 .welcome{
 	/* Text style for "Welcome To Our" */
-	width: 35%;
+	max-width: 35%;
 	height: 40%;
 	color: white;
 	font-family: Droid Serif;
@@ -193,17 +196,18 @@ table {
 	line-height: 1.33em;
 	text-transform: uppercase;
 	margin: 0 auto;
+	white-space: nowrap;
 }
 .gallery{
-	width: 100%;
+	max-width: 100%;
 	background-color: #f7f7f7;
 }
 .gallery_inside{
-	width: 95%;
+	max-width: 95%;
 	padding: 5%;
 }
 .prtflio{
-	width: 75%;
+	max-width: 75%;
 	margin: 3% auto;
 }
 .prtflio_item{
@@ -218,7 +222,7 @@ table {
 	opacity: 0.7;
 }
 .prtflio_pic{
-	width: 100%;
+	max-width: 100%;
 }
 .prtflio-title{
     font-family: Montserrat;
@@ -236,7 +240,8 @@ table {
     font-style: italic;
     line-height: 1.5em;
     /* Text style for "Product Mock-U" */
-    width: 40%;
+    max-width: 40%;
+    min-width: 20%;
     margin: 0 auto;
     padding-bottom: 10%;
     text-align: center;
@@ -425,7 +430,6 @@ table {
 }
 .footer_textarea{
 	width: 49%;
-	margin: 0 auto;
 	float: right;
 }
 .form_content{
