--- a/css/base.css
+++ b/css/base.css
@@ -14,8 +14,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 body {
 	line-height: 1.2;
-	overflow-x: hidden;
-	
+	margin: 0;
 }
 ol { 
 	padding-left: 1.4em;
@@ -61,12 +60,10 @@ table {
     color: #fed136;
 } 
 .slide {
-	max-width: 1650px;
-	min-width: 800px;
 	height: 750px;
 	background: url('../image/background_header.jpg') no-repeat;
+	background-position: center;
 	background-size: cover;
-	margin-left: -3%;
 }
 .title {
 	color: #303030;
@@ -74,21 +71,22 @@ table {
 	font-size: 30px;
 	font-style: italic;
 }
+.title_inside_slide{
+	width: 100%;
+	padding-top: 10%;
+}
 .welcome{
 	/* Text style for "Welcome To Our" */
-	max-width: 35%;
-	height: 40%;
 	color: white;
 	font-family: Droid Serif;
 	font-size: 2.5em;
 	font-style: italic;
 	margin: 0 auto;
-	line-height: 15;
 	text-align: center;
+	padding-top: 5%;
 }
 .NTMU{
 	/* Text style for "It’s nice to M" */
-	width: 60%;
 	color: white;
 	font-family: Montserrat;
 	font-size: 4.6em;
@@ -116,10 +114,10 @@ table {
 }
 .sub-title{
 	/* Text style for "Proin iaculis" */
-	width: 40%;
+	width: 60%;
 	color: #777;
 	font-family: Droid Serif;
-	font-size: 1em;
+	font-size: 1.2em;
 	font-style: italic;
 	text-align: center;
 	margin: 3% auto;
@@ -128,7 +126,7 @@ table {
 	/* Text style for "E-Commerce" */
 	color: #222;
 	font-family: Montserrat;
-	font-size: 1em;
+	font-size: 1.25em;
 	font-weight: 700;
 	line-height: 3em;
 }
@@ -152,7 +150,7 @@ table {
 .background{
 	border: 3px solid #fed136;
 	border-radius: 100%;
-	width: 40%;
+	width: 35%;
 	background-color: white;
 	border: 0.3em solid #fed136;
 	list-style-type: none;
@@ -177,10 +175,10 @@ table {
 	font-weight: 700;
 }
 .description{
-	width: 12em;
+	width: 95%;
 	color: #777;
 	font-family: RobotoSlab;
-	font-size: 1.05em;
+	font-size: 1.15em;
 	font-weight: 400;
 	text-align: center;
 }
@@ -233,12 +231,11 @@ table {
 }
 .prtflio_sub-title{
     font-family: DroidSerif;
-    font-size: 1em;
+    font-size: 1.1em;
     font-style: italic;
     line-height: 1.5em;
     /* Text style for "Product Mock-U" */
-    max-width: 40%;
-    min-width: 20%;
+    max-width: 45%;
     margin: 0 auto;
     padding-bottom: 10%;
     text-align: center;
@@ -288,7 +285,7 @@ table {
 	/* Text style for "Proin iaculis" */
 	color: #777;
 	font-family: RobotoSlab;
-	font-size: 1.04em;
+	font-size: 1.25em;
 	font-weight: 400;
 	margin-top: 5%;
 }
@@ -300,7 +297,10 @@ table {
 	margin: 0 3%;
 	float: left;
 	border-radius: 50%;
-	background-color: #FFF;
+}
+.about_img img{
+	border: 7px solid #f1f1f1;
+	border-radius: 100%;
 }
 .about_button{
 	/* Style for "Container" */
@@ -309,7 +309,7 @@ table {
 	background-color: #fed136;
 	border: 1em solid #f1f1f1;
 	border-radius: 100%;
-	margin-right: 40%;
+	margin-right: 39%;
 	transition: all .7s ease .15s;
 }
 .about_button:hover{
@@ -340,7 +340,6 @@ table {
 	margin: 0 auto;
 }
 .block{
-    width: 91%;
     margin: 0 auto;
     padding: 5%;
     background-color: #f9f9f9;
@@ -408,7 +407,7 @@ table {
 }
 .footer_content{
 	width: 100%;
-	height: 670px;
+	height: 42em;
 	background: url('../pic/map-image.png') 100% 100% no-repeat #222;
 	background-position: right 8em;
 }
@@ -461,21 +460,22 @@ table {
 }
 .text{
 	/* Text style for "© Copyright 20" */
-	width: 20%;
+	width: 35%;
 	color: #555;
 	font-family: Montserrat;
 	font-size: 1em;
 	font-weight: 400;
-	line-height: 22px;
-	margin: 0.5% 0 0 10%;
+	line-height: 50px;
 	float: left;
+	text-align: center;
 }
 .social{
-	width: 13%;
+	width: 25%;
 	margin: 0% auto;
+	text-align: center;
 }
 .section_footer{
-	padding: 2%;
+	padding: 1%;
 }
 .ic-f{
 	/* Style for "Google+ Backgr" */
