--- a/css/base.css
+++ b/css/base.css
@@ -34,9 +34,6 @@ table {
 	overflow: hidden;
 	display: block;
 }
-.wrap {
-	overflow-y: hidden;
-}
 .header{
 	position: relative;
 }
@@ -51,46 +48,41 @@ table {
 }
 .menu {
 	float: right;
-	line-height: 400%;
+	line-height: 250%;
 }
 .slide {
 	height: 750px;
 	background: url('../image/background_header.jpg') no-repeat;
 	background-position: center;
 	background-size: cover;
-}
-.title {
-	color: #303030;
-	font-family: Montserrat;
-	font-size: 30px;
-	font-style: italic;
+	text-align: center;
 }
 .title_inside_slide{
 	width: 100%;
 	padding-top: 10%;
+	text-align: center;
 }
-.tell_me { font-family: Montserrat; font-size: 1.1em; font-weight: 700; width: 15.6%; height: 9.5%; margin: 0 0 0 43%; transition: all .3s ease .15s; text-transform: uppercase; color: white; border-radius: 0.2em; background: #fed136;
+.tell_me { font-family: Montserrat; font-size: 1.1em; font-weight: 700; width: 15.6%; height: 9.5%; transition: all .3s ease .15s; text-transform: uppercase; color: white; border-radius: 0.2em; background: #fed136;
+}
+.cont{
+	max-width: 940px;
+	margin: 0 auto;
 }
 .services{
 	width: 80%;
 	margin: 6.5% auto;
-}
-.cont{
-	width: 80%;
 	text-align: center;
-	margin: 1% auto;
 }
 .commerce,
 .web,
 .security{
 	width: 20%;
 	display: inline-block;
-	text-align: center;
 	margin: 4%;
 }
-.pic_services-basket{ width: 50%; margin: 0 auto; margin-top: 24%; padding-bottom: 15%;}
-.pic_services-laptop{ width: 50%; margin: 0 auto; margin-top: 28%; padding-bottom: 16%;}
-.pic_services-lock{ width: 40%; margin: 0 auto; margin-top: 21%; padding-bottom: 16%;}
+.pic_services-basket{ width: 50%; margin-top: 24%; padding-bottom: 15%;}
+.pic_services-laptop{ width: 50%; margin-top: 28%; padding-bottom: 16%;}
+.pic_services-lock{ width: 40%; margin-top: 21%; padding-bottom: 16%;}
 
 .background{
 	border: 3px solid #fed136;
@@ -111,25 +103,6 @@ table {
 	background-color: #696969;
 	border: 0.3em solid #696969;
 }
-.title-commerce,
-.title-web,
-.title-security{
-	color: #222;
-	font-family: Montserrat;
-	font-size: 2em;
-	font-weight: 700;
-}
-.title-portfolio{
-	width: 24%;
-	color: #222;
-	font-family: Montserrat;
-	font-size: 2.5em;
-	font-weight: 700;
-	line-height: 1.33em;
-	text-transform: uppercase;
-	margin: 0 auto;
-	white-space: nowrap;
-}
 .gallery{
 	max-width: 100%;
 	background-color: #f7f7f7;
@@ -137,15 +110,16 @@ table {
 .gallery_inside{
 	max-width: 95%;
 	padding: 5%;
+	text-align: center;
 }
 .prtflio{
-	max-width: 75%;
-	margin: 3% auto;
+	max-width: 940px;
+	margin: 0 auto;
 }
 .prtflio_item{
 	list-style-type: none;
 	float: left;
-	margin: 2% ;
+	margin: 1% ;
 	background-color: white;
 	transition: all .3s ease .15s;
 }
@@ -155,10 +129,23 @@ table {
 }
 .prtflio_pic{
 	max-width: 100%;
+	height: auto;
 }
 .container{
 	width: 940px;
 	margin: 5% auto;
+	text-align: center;
+}
+.container .about::after{
+	content: '';
+	background-color: #f1f1f1;
+	position: absolute;
+	width: 2px;
+	height: 1150px;
+	top: 0;
+	bottom: 90px;
+	left: 51.9%;
+	z-index: -1;
 }
 .about_title{
 	width: 25%;
@@ -173,6 +160,7 @@ table {
 .about {
 	text-align: right;
 	margin-top: 10%;
+	position: relative;
 }
 .about_item {
 	margin-bottom: 8%;
@@ -223,13 +211,14 @@ table {
 	font-size: 1.35em;
 	font-weight: 700;
 	text-transform: uppercase;
-	text-align: center;
 	margin-left: 15%;
 }
 .block{
+	width: 940px;
     margin: 0 auto;
-    padding: 5%;
+    padding: 3%;
     background-color: #f9f9f9;
+    text-align: center;
 }
 .black{
 	border-radius:50%;
@@ -237,10 +226,10 @@ table {
 .step1{
     display: inline-block;
     margin: 5%;
+    width: 20%;
 }
 .contain{
-	width: 80%;
-    text-align: center;
+	max-width: 100%;
     margin: 0% auto;
 }
 .tw {width: 50%; height: 47%;}
@@ -248,7 +237,7 @@ table {
 .pin{width: 40%; height: 50%;}
 .gog{width: 45%;height: 45%;}
 
-.icons { line-height: 3; float: left; width: 22%; height: 40px; margin: 4%; list-style-type: none; transition: all .3s ease .15s; text-align: center; border: 3px solid #222; border-radius: 80%; background-color: #f9f9f9;}
+.icons { line-height: 3; float: left; width: 21%; height: 40px; margin: 4%; list-style-type: none; transition: all .3s ease .15s; border: 3px solid #222; border-radius: 80%; background-color: #f9f9f9;}
 .icons:hover{
     cursor: pointer;
     opacity: 1;
@@ -256,29 +245,17 @@ table {
     background: #fffafa;
 }
 .ic{
-    width: 78%;
+    max-width: 100%;
     margin: 0 auto;
 }
 .ic_s{
-    width: 75%;
- 	margin-left: 25%;
-}
-.descr{
-    font-family: Roboto Slab;
-    font-size: 1em;
-    font-weight: 400;
-    /* Text style for "Proin iaculis" */
-    width: 50%;
-    margin: 0 auto;
-    text-align: center;
-    color: #777;
+    width: 100%;
+ 	margin-left: 20%;
 }
 .footer_head{
 	text-align: center;
 }
-.media {
-	list-style-type: none;
-}
+
 .correct{
 	margin-bottom: 5%;
 }
@@ -287,22 +264,13 @@ table {
 	margin: 2%;
 }
 .footer_content{
-	width: 100%;
-	height: 42em;
-	background: url('../pic/map-image.png') 100% 100% no-repeat #222;
+	height: 676px;
+	background: url('../pic/map-image.png') no-repeat #222;
 	background-position: right 8em;
-}
-.title_footer{
-	/* Text style for "Contact us" */
-	color: white;
-	font-family: Montserrat;
-	font-size: 2.5em;
-	font-weight: 700;
-	text-transform: uppercase;
 	text-align: center;
 }
 .form_input{
-	width: 49%;
+	width: 46.5%;
 	float: left;
 }
 .footer_textarea{
@@ -310,7 +278,7 @@ table {
 	float: right;
 }
 .form_content{
-	width: 55%;
+	width: 940px;
 	margin: 0 auto;
 	padding-top: 8%;
 }
